# HelperBot

./: .gitignore  main.py  pyproject.toml  requirements.txt  run.sh
core/: Cog.py  Context.py  HelperBot.py  __init__.py
data/: db.db  mr_robot.txt  questions.json  quotes.txt
discord/ext/menus/: __init__.py
lib/cogs/: applymod.py  help.py  highlight.py  on_message.py  suggest.py  tag.py  ult.py  youtube.py
lib/cogs/rtfm/: _doc.py  _ref.py  _tio.py  _used.py  rtfm.py
lib/cogs/tag/: __init__.py  method.py
lib/events/: events_cmd_error.py  events_on_join.py  events_on_message.py  events_on_ready.py  tasks_channel.py  tasks_rainbow_role.py
utils/: config.py  db.py  formats.py  keep_alive.py  paginator.py  youtube_search.py
